Fix footer and player overlapping (#653)

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,6 +1,7 @@
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 .footer{
   background-color: #32312C;
-  padding: 3% 0%;
+  padding: 3% 0% 5% 0%;
   font-size: 14px;
   margin-top: 50px;
 
@@ -31,6 +32,14 @@
     }
   }
 
+  @media(max-width: $screen-sm-max){
+    padding-bottom: 7%;
+  }
+
+  @media(max-width: $screen-sm){
+    padding-bottom: 9%;
+  }
+  
   :global(a){
     -webkit-transition: color .15s ease-in-out;
     -moz-transition: color .15s ease-in-out;
